# s4-research-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml  pages.yml
.streamlit/: config.toml
config/: settings.py
data/evaluation/: adversarial_queries.json  agent_test_queries.json  contradiction_sets.json  golden_queries.json  injection_prompts.json  test_queries.json  unanswerable_queries.json
data/raw/: area51_foia_doe_1994.txt  element115_synthesis_2003.txt  lazar_joe_rogan_2019.txt  lazar_klas_interview_1989.txt  lazar_polygraph_results.txt  manifest.example.json  manifest.json  production_notes_s4_film.md
docker/: Dockerfile  Dockerfile.frontend  docker-compose.demo.yml  docker-compose.yml
docs/: index.html
docs/data/: element-115.json  government-corroboration.json  los-alamos.json  manifest.json  propulsion.json  timeline.json
scripts/: demo.sh  record_demo_traces.py
src/: __init__.py  cli.py  logging_config.py
src/agents/: __init__.py  corpus_search.py  cross_reference.py  fact_checker.py  orchestrator.py  state.py  timeline_agent.py  tools.py
src/api/: __init__.py  app.py  routes.py
src/evaluation/: __init__.py  evaluator.py  suite.py
src/frontend/: __init__.py  app.py
src/ingestion/: __init__.py  chunker.py  loader.py  vectorstore.py
src/models/: __init__.py  documents.py  queries.py
src/observability/: __init__.py  metrics.py  tracer.py
src/prompts/: __init__.py  agent_prompts.py  templates.py
src/retrieval/: __init__.py  (+2 more)
tests/: test_agents.py  test_api.py  test_ingestion.py  test_models.py  test_pipeline.py
(+33 files in other folders)
