[project]
name = "s4-research-intelligence"
version = "1.0.0"
description = "RAG-powered documentary research assistant for S4: The Bob Lazar Story"
authors = [{ name = "Chris Matteau", email = "illusionmado@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "ollama>=0.3.0",
    "tiktoken>=0.7.0",
    "unstructured[pdf,docx,md]>=0.15.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=2.20",
]
deploy = [
    "boto3>=1.34",
    "gunicorn>=22.0",
]

[project.scripts]
s4ri = "src.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "config*"]
